# latex-desktop-studio

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
scripts/: test-editor-logic.mjs  verify-ui-regressions.mjs
src/: App.tsx  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AssetPreview.tsx  CodexAnswerView.tsx  CodexContextStrip.tsx  CodexDiffView.tsx  CodexHistoryList.tsx  CodexMentionMenu.tsx  CodexProgressView.tsx  CompileErrorPanel.tsx  FileTreeNode.tsx  PdfPreview.tsx  SafetyConfirmDialog.tsx  ToolPill.tsx
src/lib/: codexContext.ts  diagnostics.ts  editorLogic.ts  monacoLatex.ts  preferences.ts
