[package]
name = "latex-desktop-studio"
version = "0.1.0"
description = "A local Overleaf-style LaTeX desktop studio with Codex editing."
authors = ["cjz"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.78"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
biblatex = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.6"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.7.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"
zip = { version = "4.2", default-features = false, features = ["deflate-flate2"] }

[dev-dependencies]
tempfile = "3.14"
